--- a/index.html
+++ b/index.html
@@ -13,51 +13,85 @@
     <div class="container">
 
 
-      <h2>Caley Powell Casting</h2>
+      <h1>Caley Powell Casting</h1>
 
 
-      <div class="navbar">
+      <div class="navbar caley-nav">
+        <div class="container">
+
+          <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
 
+          <!-- Place everything within .navbar-collapse to hide it until above 768px -->
+          <div class="nav-collapse collapse navbar-responsive-collapse">
+           <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul> 
 
-        <ul class="nav navbar-nav">
-          <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
+          <form class="navbar-form pull-right" action="">
+            <input type="text" class="form-control col-lg-8" placeholder="Search">
+          </form> 
 
-        <form class="navbar-form pull-right" action="">
-          <input type="text" class="form-control col-lg-8" placeholder="Search">
-        </form> 
+        </div><!-- /.nav-collapse -->
+      </div><!-- /.container -->
+    </div><!-- /.navbar -->
+
+
+    <p class="lead">I am a freelance casting director with a passion for and experience in casting short films, music videos/ promos, online series and I also have started casting for feature films and theatre.
+    </p>
+    <p>I also co-run my own production company Flitter Films with my other half Kristian Mitchell-Dolby where I produce and cast all of our projects so I mention Flitter Film news in my news section. 
+    </p>
+    <p>Please get in touch if you have a project that you would like me to cast and also get in touch if you are an actor as if I find a part for you I will let you know. Also send through your headshots, showreels and any questions about acting or casting and I'll get back to you as soon as I can.
+    </p>
+    <p>On a side note to casting I am also, this year, doing a yearly fundraising event for Cancer Research UK, follow me on @CaleyPCasting here is the reason why: http://nowletmetellyou.tumblr.com  and more information will be posted up on my JustGiving page I appreciate all donations.
+    </p>
+
+    <h3>News</h3>
+
+    <div class="media">
+      <a class="pull-left" href="#">
+        <img class="media-object" src="http://placehold.it/64x64">
+      </a>
+      <div class="media-body">
+        <h4 class="media-heading">Media heading</h4>
+        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
       </div>
-
-
-      <p>I am a freelance casting director with a passion for and experience in casting short films, music videos/ promos, online series and I also have started casting for feature films and theatre.
-</p>
-      <p>I also co-run my own production company Flitter Films with my other half Kristian Mitchell-Dolby where I produce and cast all of our projects so I mention Flitter Film news in my news section. 
-</p>
-      <p>Please get in touch if you have a project that you would like me to cast and also get in touch if you are an actor as if I find a part for you I will let you know. Also send through your headshots, showreels and any questions about acting or casting and I'll get back to you as soon as I can.
-</p>
-      <p>On a side note to casting I am also, this year, doing a yearly fundraising event for Cancer Research UK, follow me on @CaleyPCasting here is the reason why: http://nowletmetellyou.tumblr.com  and more information will be posted up on my JustGiving page I appreciate all donations.
-</p>
-
-
     </div>
-
 
   </div>
 
-  <div id="footer">
-      <div class="container">
-        <p>Contact details, copyright 2013</p>
+
+</div>
+
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <p class="text-muted">Address</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Twitter</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Copyright (c) 2013 Caley</p>
       </div>
     </div>
 
-  <!-- JavaScript plugins (requires jQuery) -->
-  <script src="http://code.jquery.com/jquery.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
+  </div>
+</div>
+
+<!-- JavaScript plugins (requires jQuery) -->
+<script src="http://code.jquery.com/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
 
 
 </body>
